--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- Header -->
 <header>
-    <a href="#">WEBSTUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <nav>
         <ul>
             <li><a href="#">Studio</a></li>
@@ -17,10 +17,16 @@
             <li><a href="#">Contacts</a></li>
         </ul>
     </nav>
-    <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110011111111">+1 (000) 111-11-11</a>
-    </div>
+    <address>
+        <ol>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+110011111111">+1 (000) 111-11-11</a>
+            </li>
+        </ol>
+    </address>
 </header>
 
 <!-- Main Content -->
@@ -33,21 +39,22 @@
 
     <!-- Features Section -->
     <section>
+        <h2>Our Services</h2>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business problem and solve it with the perfect and creative solution.</p>
             </li>
             <li>
-                <h2>Punctuality</h2>
+                <h3>Punctuality</h3>
                 <p>Bring the key message to the brand audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h2>Diligence</h2>
+                <h3>Diligence</h3>
                 <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h2>Technologies</h2>
+                <h3>Technologies</h3>
                 <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
@@ -57,22 +64,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="images/mark-guerrero.jpg" width="200" alt="Mark Guerrero">
+                <img src="./images/mark-guerrero.jpg" width="264" alt="Mark Guerrero">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="images/tom-ford.jpg" width="200" alt="Tom Ford">
+                <img src="./images/tom-ford.jpg" width="264" alt="Tom Ford">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="images/camila-garcia.jpg" width="200" alt="Camila Garcia">
+                <img src="./images/camila-garcia.jpg" width="264" alt="Camila Garcia">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="images/daniel-wilson.jpg" width="200" alt="Daniel Wilson">
+                <img src="./images/daniel-wilson.jpg" width="264" alt="Daniel Wilson">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
@@ -82,7 +89,7 @@
 
 <!-- Footer -->
 <footer>
-    <a href="#">WEBSTUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & design solutions.</p>
 </footer>
 
